--- a/style.css
+++ b/style.css
@@ -2,9 +2,6 @@
   --primary-color: #1a95e0;
   --secondary-color: #727578;
   --error-color: #d20962;
-  --background-color: #fff;
-  --font-color: #151515;
-  --invert-font-color: #fff;
   --font-stack: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace, serif;
 
@@ -15,6 +12,18 @@
 
   /* Transition */
   --transition-base: 0.3s ease;
+}
+
+[data-theme="light"] {
+  --background-color: #fff;
+  --font-color: #151515;
+  --invert-font-color: #fff;
+}
+
+[data-theme="dark"] {
+  --background-color: #222225;
+  --font-color: #e8e9ed;
+  --invert-font-color: #222225;
 }
 
 *,
@@ -46,7 +55,8 @@ a {
   cursor: pointer;
   color: var(--primary-color);
   text-decoration: none;
-  transition: color var(--transition-base),
+  transition:
+    color var(--transition-base),
     background-color var(--transition-base);
 }
 
