--- a/styles/style.css
+++ b/styles/style.css
@@ -61,7 +61,6 @@ body {
   color: var(--font-color);
   letter-spacing: 0.05em;
   padding: 16px 20px;
-  height: 100vh;
   max-width: var(--page-width);
   margin: 0 auto;
   background: var(--background-color);
@@ -90,8 +89,7 @@ a {
   cursor: pointer;
   color: var(--primary-color);
   text-decoration: none;
-  transition:
-    color var(--transition-base),
+  transition: color var(--transition-base),
     background-color var(--transition-base);
 }
 
